Fix stretched images with aspect-ratio frames; add photo update guide

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,9 +41,9 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img,
-picture {
+img {
   max-width: 100%;
+  height: auto;
   display: block;
 }
 
